--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -8,10 +8,17 @@
     <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.versioned("bootstrap/css/bootstrap.min.css")">
     <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+    <link rel="stylesheet" type="text/css" href="@routes.Assets.versioned("css/componentMenu.css")">
+    <link rel="stylesheet" type="text/css" href="@routes.Assets.versioned("css/demoMenu.css")">
+    <link rel="stylesheet" type="text/css" href="@routes.Assets.versioned("css/iconsMenu.css")">
+    <link rel="stylesheet" type="text/css" href="@routes.Assets.versioned("css/normalizeMenu.css")">
     <script src="@routes.Assets.versioned("stylesheets/js/angular.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("stylesheets/js/angular-route.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("stylesheets/js/angular-cookies.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.versioned("stylesheets/js/classie.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.versioned("stylesheets/js/mlpushmenu.js")" type="text/javascript"></script>
     <script type="text/javascript" src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.versioned("stylesheets/js/modernizr.custom.js")"></script>
     <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/app.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/services/usuarioService.js")" type="text/javascript"></script>
