--- a/cliente/app/views/carona.html
+++ b/cliente/app/views/carona.html
@@ -1,5 +1,8 @@
 
 <body>
+  <br>
+  <br>
+  <br>
   <div class="row">
     <div class="col-md-12">
       <div class="col-md-2 col-md-offset-1">
@@ -11,29 +14,36 @@
               </div>
               <div class="form-group">
                 <label for="diasSemana"> <h5 style ="color: #2aabd2;"><b>
-                  Data</b></h5></label>
-                <input type="text" ng-model="data" jqdatepicker />
-                <br/>
-                <br/>
+                  DiaDaSemana</b></h5></label>
+                <select class="form-control" ng-model="horario.DiaDaSemana" ng-options="opt.value for opt in diaSemanas">
+                </select>
+
               </div>
 
 
               <div class="form-group">
                 <label for="horario"> <h5 style ="color: #2aabd2;"><b>
-                  Horario </b></h5></label>
-                <uib-timepicker ng-model="hora" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></uib-timepicker>
+                  Aula </b></h5></label>
+                <select class="form-control" ng-model="horario.aula" ng-options="opt.value for opt in horarios">
+                  </select>
+              </div>
+
+              <div class="form-group">
+                <label for="vagas"> <h5 style ="color: #2aabd2;"><b>
+                  Vagas </b></h5></label>
+                <select class="form-control" ng-model="vagas" ng-options="opt.value for opt in NumVagas">
+                </select>
               </div>
 
               <label for="tipoCarona"> <h5 style ="color:  #2aabd2;"><b>
                 Tipo de Carona</b></h5></label>
 
               <br>
-
               <div class="radio">
-                <label><input type="radio" name="optradio" ng-model="opcaoCarona" value="Ida">Ida</label>
+                <label><input type="radio" name="optradio" ng-model="opcaoCarona" value=0>Ida</label>
               </div>
               <div class="radio" ng-model="opcaoCarona" value="volta">
-                <label><input type="radio" name="optradio" ng-model="opcaoCarona" value="Volta">Volta</label>
+                <label><input type="radio" name="optradio" ng-model="opcaoCarona" value=1>Volta</label>
               </div>
 
             </div>
