--- a/cliente/app/views/carona.html
+++ b/cliente/app/views/carona.html
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="col-md-2 col-md-offset-1">
-        <div class="panel panel-info" style="background-color: transparent" >
+        <div class="panel panel-info" >
           <form action="/horario" method="post">
             <div class="form-group">
               <div data-ng-show="error" class="alert alert-danger">
