--- a/cliente/app/views/carona.html
+++ b/cliente/app/views/carona.html
@@ -20,7 +20,6 @@
 
               </div>
 
-
               <div class="form-group">
                 <label for="horario"> <h5><b>
                   Aula </b></h5></label>
@@ -35,7 +34,7 @@
                 </select>
               </div>
 
-              
+
               <label for="tipoCarona"> <h5><b>
                 Tipo de Carona</b></h5></label>
               <br>
@@ -50,12 +49,92 @@
             </div>
 
             </form>
-            <button id="singlebutton" name="salvar" class="btn btn-primary center-block" ng-click="salvarCarona()">
+            <button id="singlebutton" name="salvar" class="btn btn-default center-block" ng-click="salvarCarona()">
               Salvar
             </button>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="col-md-2" style="bottom: 465px; left:800px;">
+    <div class="panel panel-info" style="background-color: transparent" >
+      <div class="form-group">
+        <label for="rotas"> <h5 style ="color: #ffffff;"><b>
+          Selecione Bairros </b></h5></label>
+
+        <select class="form-control" id="selecaoBairro" title = "Selecione um Bairro">
+          <option value="segunda">Malvinas</option>
+          <option value="terca">Centro</option>
+          <option value="quarta">Catolé</option>
+          <option value="quinta">Mirante</option>
+          <option value="sexta">Liberdade</option>
+          <option value="setimaa">Prata</option>
+          <option value="oitava">Jardim Paulistano</option>
+          <option value="nona">Tambor</option>
+          <option value="decima">Distrito Industrial</option>
+          <option value="decimaPri">Catolé de Zé Ferreira</option>
+          <option value="decimaSeg">Ramadinha</option>
+          <option value="decimaTer">Catolé</option>
+          <option value="decimaQua">Bodocongó</option>
+          <option value="decimaQui">Alto Branco</option>
+          <option value="decimaSex">Cruzeiro</option>
+          <option value="decimaSet">Novo Cruzeiro</option>
+          <option value="decimaOit">São José</option>
+          <option value="decimaNon">Palmeira</option>
+          <option value="vigesima">Castelo Branco</option>
+          <option value="vigesimaPri">José Pinheiro</option>
+          <option value="vigesimaSec">Itararé</option>
+          <option value="vigesimaTer">Presidente Médici</option>
+          <option value="vigesimaQua">Dinamérica</option>
+          <option value="vigesimaQui">Santa Rosa</option>
+        </select>
+        <br>
+        <button name="Adicionar" class="btn btn-default " onclick="adicionaRotas()">
+          Add
+        </button>
+        <button name="Deletar" class="btn btn-default " onclick="deletarRota()">
+          Del
+        </button>
+      </div>
+
+      <div class="panel panel-primary">
+        <table class="table table-striped" id="tabelaRotas"> </table>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    function adicionaRotas(){
+      var bairro = document.getElementById("selecaoBairro");
+      var table = document.getElementById("tabelaRotas");
+      if (bairro.selectedIndex >= 0) {
+        var tableLinha = table.insertRow(table.rows.length);
+        var celulaTabela = tableLinha.insertCell(0);
+        var objInputCheckBox = document.createElement("input");
+        objInputCheckBox.type = "checkbox";
+        celulaTabela.appendChild(objInputCheckBox);
+        var celulaBairro = tableLinha.insertCell(1);
+        celulaBairro.innerHTML = bairro.options[ bairro.selectedIndex ].text;
+      }
+    }
+    function deletarRota() {
+      var table = document.getElementById("tabelaRotas");
+      var tamTable = table.rows.length;
+      var contador = 0;
+      for (var i = 0; i < table.rows.length; i++) {
+        /*** Get checkbox object ***/
+        var chk = table.rows[i].cells[0].childNodes[0];
+        if (chk.checked) {
+          /*** if checked we del ***/
+          table.deleteRow(i);
+          tamTable--;
+          i--;
+          contador = contador + 1;
+        }
+      }
+    }
+  </script>
+
 </body>
 
