--- a/cliente/app/views/main.html
+++ b/cliente/app/views/main.html
@@ -12,21 +12,21 @@
     <div data-ng-show="error" class="alert alert-danger">
       {{errorMessage}}
     </div>
-    <div class="form-group">
-        <label for="email"> <h5 style ="color: white;"><b>
+    <div class="form-group-login">
+        <label for="email"> <h5 ><b>
           Email <span class="glyphicon glyphicon-user" aria-hidden="true"></span> </b></h5></label>
         <input type="email" class="form-control" name="email" placeholder="Digite o e-mail" autofocus required data-ng-model="usuario.email">
 
     </div>
-    <div class="form-group">
-        <label for="password"> <h5 style ="color: white;"><b>
+    <div class="form-group-login">
+        <label for="password"> <h5 ><b>
           Senha <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span> </b></h5></label>
         <input type="password" class="form-control" name="senha" placeholder="Digite a senha" autofocus required data-ng-model="usuario.senha">
     </div>
 
       <br>
-    <button type="submit" class="btn btn-default"  style="color: #2aabd2;"  data-ng-disabled="form.email.$error.required || form.senha.$error.required" data-ng-click="logar(usuario)" >Login </button>
-    <button type="button" class="btn btn-default" style="color: #2aabd2;" value="Cadastrar" ng-click="trocar()">Cadastrar</button>
+    <button type="submit" class="btn btn-default btn-default-blue" data-ng-disabled="form.email.$error.required || form.senha.$error.required" data-ng-click="logar(usuario)" >Login </button>
+    <button type="button" class="btn btn-default btn-default-blue" value="Cadastrar" ng-click="trocar()">Cadastrar</button>
   </form>
 
 </div>
