--- a/cliente/app/styles/main.css
+++ b/cliente/app/styles/main.css
@@ -1,5 +1,9 @@
 body{
-  background-color: rgb(0,121,192) ;
+  background-image: url('../images/carona.jpg');
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #fffbf9 ;
 }
 
 .container{
@@ -59,6 +63,23 @@ body{
   text-decoration-color: red;
 }
 
+#tableRota{
+  display: block;
+  height: 70px;
+  overflow-y: scroll;
+}
+
+#tabelaHorario{
+  display: block;
+  height: 300px;
+  overflow-y: scroll;
+}
+
+.item {
+  width: 150px;
+  text-align: center;
+}
+
 #welcomeNotify{
   color:white;
   background-color: #5998d2;
@@ -97,6 +118,8 @@ body{
   background-color: #ff291c ;
   color: white;
 }
+
+
 
 .btn-file {
   position: relative;
@@ -166,3 +189,4 @@ h1 {
 .table-striped>tbody>tr:nth-child(even)>th {
   background-color: #66afe9;
 }
+
