--- a/cliente/app/views/horario.html
+++ b/cliente/app/views/horario.html
@@ -42,7 +42,7 @@
       </ul>
 
       <div class="tabs-container">
-          <div class="tab-content" ng-show="tab == 1" style="width: 800px;">
+          <div class="tab-content" ng-show="tab == 1">
               <div class="panel-body">
                 <table class="table table-striped" id="tabelaHorario">
                   <thead>
