--- a/cliente/app/views/cadastro.html
+++ b/cliente/app/views/cadastro.html
@@ -1,5 +1,5 @@
 <div class="center">
-  <h1 class="borda-2px" style="color: #fffbf9 ;text-align: center; font-family: Goudy Stout; "> Cadastro! </h1>
+  <h1 class="borda-2px" id = titleCadastro> Cadastro! </h1>
 </div>
 <br>
 <br>
