--- a/cliente/app/views/main.html
+++ b/cliente/app/views/main.html
@@ -1,5 +1,5 @@
 <!-- Titulo -->
-<div class="center" style="top:112px;">
+<div class="center" id = "titleInicial">
   <h1 class="borda-2px" id = "title">
     Carona-me!
   </h1>
@@ -7,7 +7,7 @@
 
 <!-- Login form -->
 
-<div class="almostJumbotron" style="top:120px;">
+<div class="almostJumbotron" id = "panelLogin">
   <form name="form">
     <div data-ng-show="error" class="alert alert-danger">
       {{errorMessage}}
